Fixed spacing on footer

--- a/src/PropertyTaxPortal/wwwroot/css/site.css
+++ b/src/PropertyTaxPortal/wwwroot/css/site.css
@@ -19,7 +19,7 @@
     overflow: hidden;
     display: block;
     position: relative;
-    padding-bottom: 180px; /* height of your footer */
+    padding-bottom: 159px; /* height of your footer */
 }
 
 html,
